@@ -1309,6 +1309,12 @@ Example  : pray "sense alignment" bob\n\r\
 The caster gains the ability to look into the soul of the target and see \
 their alignment.
 
+PRAYER_SENSE_ALLERGIES=<ABILITY>\
+Usage    : PRAY "SENSE ALLERGIES" [TARGET NAME]\n\r\
+Example  : pray "sense allergies" bob\n\r\
+The caster gains the ability to look into the body of the target and see \
+their allergies.
+
 PRAYER_SENSE_EVIL=<ABILITY>\
 Usage    : PRAY "SENSE EVIL"\n\r\
 Example  : pray "sense evil"\n\r\
