@@ -1997,6 +1997,13 @@ This spell will teleport the caster and his or her group to a random location \
 within the specified area.  Use the 'areas' command to see a list of valid \
 areas.
 
+SPELL_TELEPORT_OBJECT=<ABILITY>\
+Usage    : CAST TELEPORT [OBJECT NAME] [PLACE OR PERSON NAME] \n\r\
+Example  : cast teleport sword garden\n\r\
+Example  : cast teleport sword bob\n\r\
+This spell will teleport the targeted object to the same room as the \
+specified person or place.  The object must be held by the caster.
+
 SPELL_TELEPORTATION_WARD=<ABILITY>\
 Usage    : CAST "TELEPORTATION WARD" [TARGET NAME] \n\r\
 Example  : cast "teleportation ward" orc\n\r\
